# k3l-fcgraph-embeds

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_migrations.py  test_sync.py
examples/: basic_usage.py
k3l/fcgraph/embeds/: __init__.py  migration_manager.py  sync.py  types.py
k3l/fcgraph/embeds/migrations/: __init__.py  env.py
k3l/fcgraph/embeds/migrations/versions/: 001_create_cast_embeds_table.py  __init__.py
tests/: __init__.py  test_types.py
